--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,200;0,300;0,400;0,500;1,300;1,500&family=Atkinson+Hyperlegible:ital@0;1&display=swap');
 
+
 /* Color Theme Swatches in Hex */
 $ForegroundDark: #1B0002;
-$ForegroundLight: #FE6178;
+$ForegroundLight: #A16D73;
 $BackgroundColor: #FBF1E9;
 $ForegroundWhite: #FFFFFF;
+$ColorPrimary: #1A0004;
 
 // Font Familys
 $Archivo: 'Archivo',
@@ -19,6 +21,8 @@ $MainContainerWidthSM: 90%;
 
 // Transition speeds
 $TransitionSpeed: all 400ms ease;
+
+
 
 * {
   margin: 0;
@@ -88,7 +92,7 @@ a {
   transition: $TransitionSpeed;
 
   &:hover {
-    color: $ForegroundLight;
+    color: $ForegroundWhite;
   }
 }
 
@@ -103,12 +107,16 @@ a {
   transition: $TransitionSpeed;
 
   &:hover {
-    background: ForegroundWhite;
+    background: $ForegroundWhite;
     color: $ForegroundLight;
     border-color: transparent;
   }
 }
 
+.btn-primary {
+  background: $ColorPrimary;
+  color: $ForegroundWhite;
+}
 img {
   display: block;
   width: 100%;
