--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 header {
     height: 100vh;
     padding-top: 7rem;
@@ -46,7 +48,7 @@ header {
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    padding: 5rem 1.5rem 1.5rem 3rem;
 }
 
 /*Scroll Down*/
