add Header section done

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,6 +6,7 @@ $BackgroundColor: #FBF1E9;
 $ForegroundWhite: #FFFFFF;
 $ColorPrimary: #1A0004;
 $ColorSecondary: #003B4A;
+$ColorTertiary: #400D1F;
 
 // Font Familys
 $Archivo: 'Archivo',
