--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,4 @@
+// Import _variable partial
 @import '../../variables';
 
 header {
@@ -12,15 +13,15 @@ header {
     position: relative;
 }
 
-/*CTA*/
-.CTA {
+// CTA
+.cta {
     margin-top: 2.5rem;
     display: flex;
     gap: 1.2rem;
     justify-content: center;
 }
 
-/*Socials*/
+// Socials
 .header__socials {
     display: flex;
     flex-direction: column;
@@ -38,9 +39,9 @@ header {
     background: $ForegroundDark;
 }
 
-/*ME*/
+// ME
 .me {
-    background: linear-gradient($ForegroundDark, transparent);
+    background: linear-gradient($ColorTertiary, transparent);
     width: 22rem;
     height: 30rem;
     position: absolute;
@@ -51,7 +52,7 @@ header {
     padding: 5rem 1.5rem 1.5rem 3rem;
 }
 
-/*Scroll Down*/
+// Scroll Down*
 .scroll__down {
     position: absolute;
     right: -2.3rem;
@@ -61,7 +62,7 @@ header {
     font-size: 0.9rem;
 }
 
-/*Media Queries (Medium Devices)*/
+// Media Queries (Medium Devices)
 @media screen and (max-width: 1024px) {
     header {
         height: 68vh;
@@ -69,7 +70,7 @@ header {
     }
 }
 
-/*Media Queries (Small Devices)*/
+// Media Queries (Small Devices)
 @media screen and (max-width: 600px) {
     header {
         height: 90vh;
