--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -14,22 +14,22 @@ nav {
     gap: 0.8rem;
     border-radius: 3rem;
     backdrop-filter: blur(15px);
-}
 
-nav a {
-    background: transparent;
-    padding: 0.9rem;
-    border-radius: 50%;
-    display: flex;
-    color: var(--color-light);
-    font-size: 1rem;
-}
+    a {
+        background: transparent;
+        padding: 0.9rem;
+        border-radius: 50%;
+        display: flex;
+        color: $ForegroundWhite;
+        font-size: 1.1rem;
 
-nav a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
-}
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.3);
+        }
 
-nav a.active {
-    background: var(--color-primary);
-    color: var(--color-bg);
+        &.active {
+            background: $ColorTertiary;
+            color: $ForegroundWhite;
+        }
+    }
 }
