--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,62 +5,64 @@ header {
     height: 100vh;
     padding-top: 7rem;
     overflow: hidden;
+
+    .header__container {
+        text-align: center;
+        height: 100%;
+        position: relative;
+    }
+    
+    // CTA
+    .cta {
+        margin-top: 2.5rem;
+        display: flex;
+        gap: 1.2rem;
+        justify-content: center;
+    }
+    
+    // Socials
+    .header__socials {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.8rem;
+        position: absolute;
+        left: 0;
+        bottom: 3rem;
+    }
+    
+    .header__socials::after {
+        content: '';
+        width: 1px;
+        height: 2rem;
+        background: $ForegroundDark;
+    }
+    
+    // ME
+    .me {
+        background: linear-gradient($ColorTertiary, transparent);
+        width: 22rem;
+        height: 30rem;
+        position: absolute;
+        left: calc(50% - 11rem);
+        margin-top: 4rem;
+        border-radius: 12rem 12rem 0 0;
+        overflow: hidden;
+        padding: 5rem 1.5rem 1.5rem 3rem;
+    }
+    
+    // Scroll Down*
+    .scroll__down {
+        position: absolute;
+        right: -2.3rem;
+        bottom: 5rem;
+        transform: rotate(90deg);
+        font-weight: 300;
+        font-size: 0.9rem;
+    }
 }
 
-.header__container {
-    text-align: center;
-    height: 100%;
-    position: relative;
-}
 
-// CTA
-.cta {
-    margin-top: 2.5rem;
-    display: flex;
-    gap: 1.2rem;
-    justify-content: center;
-}
-
-// Socials
-.header__socials {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
-}
-
-.header__socials::after {
-    content: '';
-    width: 1px;
-    height: 2rem;
-    background: $ForegroundDark;
-}
-
-// ME
-.me {
-    background: linear-gradient($ColorTertiary, transparent);
-    width: 22rem;
-    height: 30rem;
-    position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 3rem;
-}
-
-// Scroll Down*
-.scroll__down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 5rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
-}
 
 // Media Queries (Medium Devices)
 @media screen and (max-width: 1024px) {
@@ -73,7 +75,8 @@ header {
 // Media Queries (Small Devices)
 @media screen and (max-width: 600px) {
     header {
-        height: 90vh;
+        height: 95vh;
+        padding-top: 1rem;
 
         .header__socials,
         .scroll__down {
