--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,25 +1,23 @@
 @import '../../variables';
 
 .about__container {
+    height: auto;
     display: grid;
-    grid-template-columns: 35% 50%;
-    gap: 15%;
+    grid-template-columns: 40% 50%;
+    gap: 10%;
 
     .about__me {
-        width: 100%;
-        aspect-ratio: 1/1;
-        height: 27rem;
-        width: 25rem;
+        height: 25rem;
+        width: 23rem;
         border-radius: 2rem;
         background: linear-gradient(45deg, transparent, $ForegroundDark, transparent);
         display: grid;
         place-items: center;
 
         .about__me-image {
-            height: 27rem;
-            width: 25rem;
+            height: 25rem;
+            width: 23rem;
             border-radius: 2rem;
-
             background: $ForegroundLight;
             overflow: hidden;
             transform: rotate(10deg);
@@ -33,85 +31,112 @@
 
 
 
-    .about__cards {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1.5rem;
-    }
 
     .about__content {
+        .about__cards {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1.5rem;
+
+            .about__card {
+                background-color: $ColorTertiary;
+                border: 1px solid transparent;
+                border-radius: 1rem;
+                padding: 2rem;
+                text-align: center;
+                color: $ForegroundWhite;
+                transition: $TransitionSpeed;
+
+                &:hover {
+                    border: 1px solid $ColorSecondary;
+                    background: transparent;
+                    cursor: default;
+
+                    .about__icon {
+                        color: $ColorSecondary;
+                    }
+
+                    h5 {
+                        color: $ColorPrimary;
+                    }
+
+                    small {
+                        color: $ForegroundLight;
+                    }
+                }
+
+                .about__icon {
+                    font-size: 1.4rem;
+                    margin-bottom: 1rem;
+                }
+
+                h5 {
+                    font-size: 0.95rem;
+                }
+
+                small {
+                    font-size: 0.7rem;
+                }
+            }
+        }
+
         p {
             margin: 2rem 0rem 2.6rem;
             color: black;
         }
-        .about__card {
-            border: 1px solid $ColorSecondary;
-            border-radius: 1rem;
-            padding: 2rem;
-            text-align: center;
-            transition: $TransitionSpeed;
-
-            &:hover {
-                background: transparent;
-                cursor: default;
-            }
-
-            .about__icon {
-                color: $ColorSecondary;
-                font-size: 1.4rem;
-                margin-bottom: 1rem;
-            }
-
-            h5 {
-                font-size: 0.95rem;
-            }
-
-            small {
-                font-size: 0.7rem;
-                color: $ForegroundLight;
-            }
-        }
-
-
     }
 
 }
 
 
-/*Media Queries (Medium Devices)*/
+// Media Queries (MD)
 @media screen and (max-width: 1024px) {
     .about__container {
         grid-template-columns: 1fr;
         gap: 0;
+
+        .about__me {
+            margin: 2rem auto 4rem;
+        }
+    
+        .about__content {
+            p {
+                margin: 1rem 0 1.5rem;
+            }
+        }
     }
 
-    .about__me {
-        width: 50%;
-        margin: 2rem auto 4rem;
-    }
-
-    .about__content p {
-        margin: 1rem 0 1.5rem;
-    }
 }
 
 // Media Queries (SM)
 @media screen and (max-width: 600px) {
-    .about__me {
-        width: 65%;
-        margin: 0rem auto 3rem;
-    }
-
-    .about__cards {
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-    }
-
-    .about__content {
+    .about__container {
         text-align: center;
+
+        .about__me {
+            width: 15rem;
+            height: 15rem;
+            margin: 0rem auto 3rem;
+
+            .about__me-image {
+                width: 15rem;
+                height: 15rem;
+            }
+        }
+
+        .about__content {
+            .about__cards {
+                grid-template-columns: 15rem;
+                gap: 1rem;
+                justify-content: center;
+            }
+    
+            p {
+                margin: 1.5rem 0;
+                text-align: start;
+            }
+        }
+        
     }
 
-    .about__content p {
-        margin: 1.5rem 0rem;
-    }
 }
