--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -67,7 +67,7 @@ header {
 // Media Queries (Medium Devices)
 @media screen and (max-width: 1024px) {
     header {
-        height: 68vh;
+        height: 100vh;
 
     }
 }
@@ -76,8 +76,12 @@ header {
 @media screen and (max-width: 600px) {
     header {
         height: 95vh;
-        padding-top: 1rem;
+        padding-top: 2rem;
 
+        h1 {
+            font-size: 2rem;
+            line-height: 1.2;
+        }
         .header__socials,
         .scroll__down {
             display: none;
