--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -4,68 +4,84 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 3rem;
+
+    .service {
+        background: $ForegroundDark;
+        border-radius: 0 0 2rem 2rem;
+        border: 1px solid $ForegroundDark;
+        height: fit-content;
+        transition: $TransitionSpeed;
+
+        .service__head {
+            background: $BackgroundColor;
+            padding: 2rem;
+            border-radius: 0 0 2rem 2rem;
+            box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
+
+            h3 {
+                color: $ForegroundDark;
+                font-size: 1rem;
+                text-align: center;
+            }
+        }
+
+        .service__list {
+            padding: 2rem;
+            color: $ForegroundWhite;
+
+            li {
+                display: flex;
+                gap: 1rem;
+                margin-bottom: 0.8rem;
+
+                .service__list-icon {
+                    color: $ForegroundWhite;
+                    margin-top: 2px;
+                }
+
+                p {
+                    font-size: 0.9rem;
+                }
+            }
+        }
+        
+        &:hover {
+            background: transparent;
+            border-color: $ColorTertiary;
+            cursor: default;
+
+            .service__head {
+                background: $ForegroundDark;
+    
+                h3 {
+                    color: $ForegroundWhite;
+                }
+            }
+            
+            .service__list {
+                color: $ForegroundDark;
+            }
+        }
+    }
 }
 
-.service {
-    background: $ForegroundDark;
-    border-radius: 0 0 2rem 2rem;
-    border: 1px solid $ForegroundDark;
-    height: fit-content;
-    transition: $TransitionSpeed;
-}
 
-.service:hover {
-    background: transparent;
-    border-color: $ColorTertiary;
-    cursor: default;
-}
 
-.service__head {
-    background: $BackgroundColor;
-    padding: 2rem;
-    border-radius: 0 0 2rem 2rem;
-    box-shadow: 0 2rem 1rem rgba(0,0,0,0.1);
-}
-
-.service__head h3 {
-    color: var(--color-bg);
-    font-size: 1rem;
-    text-align: center;
-}
-
-.service__list {
-    padding: 2rem;
-    color: $ForegroundWhite;
-}
-
-.service__list li {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 0.8rem;
-}
-
-.service__list-icon {
-    color: var(--color-primary);
-    margin-top: 2px;
-}
-
-.service__list p {
-    font-size: 0.9rem;
-}
-
-/*Media Queries (Medium Devices)*/
+// Media Queries (MD)
 @media screen and (max-width: 1024px) {
     .services__container {
         grid-template-columns: 1fr 1fr;
         gap: 2rem;
+
+        .service {
+            height: auto;
+        }
     }
 
-    .service {
-        height: auto;
-    }
+    
 }
 
-/*Media Queries (Small Devices)*/
+// Media Queries (SM)
 @media screen and (max-width: 600px) {
     .services__container {
         grid-template-columns: 1fr;
