--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -75,7 +75,7 @@ header {
 // Media Queries (Small Devices)
 @media screen and (max-width: 600px) {
     header {
-        height: 95vh;
+        height: 45rem;
         padding-top: 2rem;
 
         h1 {
