add contact section done

--- a/src/components/Testimonials/Testimonials.scss
+++ b/src/components/Testimonials/Testimonials.scss
@@ -32,10 +32,10 @@
             width: 80%;
             margin: 0.8rem auto 0;
         }
+    }
 
-        .swiper-pagination-clickable .swiper-pagination-bullet .swiper-pagination-bullet-active {
-            background: red;
-        }
+    .swiper-pagination-bullet-active {
+        background: $ForegroundDark;
     }
 }
 
