--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,1 +1,96 @@
 @import '../../variables';
+
+.main-container.contact__container {
+    width: 58%;
+    display: grid;
+    grid-template-columns: 30% 58%;
+    gap: 12%;
+
+    .contact__options {
+        display: flex;
+        flex-direction: column;
+        gap: 1.2rem;
+
+        .contact__option {
+            background: $ForegroundDark;
+            padding: 1.2rem;
+            border-radius: 1.2rem;
+            text-align: center;
+            border: 1px solid transparent;
+            transition: $TransitionSpeed;
+
+            .contact__option-icon {
+                color: $ForegroundWhite;
+                font-size: 1.5rem;
+                margin-bottom: 0.5rem;
+            }
+
+            a {
+                margin-top: 0.7rem;
+                display: inline-block;
+                font-size: 0.8rem;
+                color: $BackgroundColor;
+            }
+
+            h4,
+            h5 {
+                color: $BackgroundColor;
+            }
+
+            &:hover {
+                background: transparent;
+                border-color: $ForegroundDark;
+
+                .contact__option-icon,
+                a {
+                    color: $ForegroundDark;
+                }
+
+                h4 {
+                    color: $ColorTertiary;
+                }
+
+                h5 {
+                    color: $ForegroundDark
+                }
+            }
+
+        }
+
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 1.2rem;
+
+        input,
+        textarea {
+            width: 100%;
+            padding: 1.5rem;
+            border-radius: 0.5rem;
+            background: transparent;
+            border: 2px solid $ForegroundDark;
+            resize: none;
+            color: $ForegroundDark;
+        }
+
+    }
+
+}
+
+
+// Media Queries (MD)
+@media screen and (max-width: 1024px) {
+    .main-container.contact__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+}
+
+// Media Queries (SD)
+@media screen and (max-width: 600px) {
+    .main-container.contact__container.contact__container {
+        width: $MainContainerWidthSM;
+    }
+}
