add styled service__list-icon icon

--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -60,6 +60,12 @@
             
             .service__list {
                 color: $ForegroundDark;
+
+                li {
+                    .service__list-icon {
+                        color: $ForegroundDark;
+                    }
+                }
             }
         }
     }
