--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -55,6 +55,10 @@
                 .github {
                     color: $ForegroundDark;
                     border-color: $ForegroundDark;
+                    &:hover {
+                        color: $ForegroundWhite;
+                        border-color: $ForegroundWhite;
+                    }
                 }
     
                 .live {
