--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -33,3 +33,10 @@ nav {
         }
     }
 }
+
+// Media Queries (SM)
+@media screen and (max-width: 600px) {
+    nav {
+        padding: 0.4rem 0.8rem;
+    }
+}
