--- a/src/components/Jobs/Jobs.scss
+++ b/src/components/Jobs/Jobs.scss
@@ -1,6 +1,12 @@
 @import '../../variables';
 
-
+.main-container.jobs__container {
+    .org__logo {
+        width: 2rem;
+        height: 2rem;
+        border-radius: 1rem;
+    }
+}
 
 
 
@@ -10,5 +16,5 @@
 
 // Media Queries (SM)
 @media screen and (max-width: 600px) {
-    
+
 }
