--- a/src/components/Testimonials/Testimonials.scss
+++ b/src/components/Testimonials/Testimonials.scss
@@ -21,7 +21,7 @@
             border: 0.4rem solid $BackgroundColor;
         }
 
-        .client__name {
+        .client__name, .client__title {
             color: $BackgroundColor;
         }
         .client__review {
